--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforesuite()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>65</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeclass()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/19 09:23:08</td>   <td>10245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.a()[pri:2, instance:Testpackage.TestCase1@4f933fd1]">a</td> 
-  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:23:12</td>   <td>14020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:23:16</td>   <td>18058</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.Afterclass()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;Afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:23:16</td>   <td>18063</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.AfterTest()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;AfterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>20/08/19 09:23:16</td>   <td>18309</td> <td title="&lt;&lt;BaseTest.Aftersuite()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;Aftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
+  <td>main@1471868639</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
+  <td>main@1471868639</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
+  <td>main@1471868639</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
+  <td>main@1471868639</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
+  <td>main@1471868639</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:54</td>   <td>26864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
+  <td>main@1471868639</td>   <td></td> </tr>
 </table>
