--- a/test-output/old/Suite-2/groups.html
+++ b/test-output/old/Suite-2/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>RegresstionTesting</td><td>TestCase1.r()[pri:0, instance:Testpackage2.TestCase1@548a9f61]<br/>TestCase1.q()[pri:0, instance:Testpackage2.TestCase1@548a9f61]<br/></td></tr>
+<tr><td>smokeTest</td><td>TestCase1.r()[pri:0, instance:Testpackage2.TestCase1@548a9f61]<br/>TestCase1.p()[pri:0, instance:Testpackage2.TestCase1@548a9f61]<br/></td></tr>
+</table>
