--- a/test-output/old/Suite-2/methods-alphabetical.html
+++ b/test-output/old/Suite-2/methods-alphabetical.html
@@ -1,22 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite-2</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:27</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.AfterTest()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&lt;&lt;AfterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.Afterclass()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&lt;&lt;Afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:27</td>   <td>37</td> <td title="&lt;&lt;BaseTest.Aftersuite()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&lt;&lt;Aftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:14</td>   <td>-13752</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:14</td>   <td>-13751</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeclass()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:14</td>   <td>-13755</td> <td title="&gt;&gt;BaseTest.beforesuite()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="83b5a8">  <td>20/08/19 09:52:18</td>   <td>-9365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.c()[pri:1, instance:Testpackage2.TestCase2@59fa1d9b]">c</td> 
-  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:14</td>   <td>-13747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>20/08/19 09:52:22</td>   <td>-4946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase2@59fa1d9b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1580893732</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:46</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.AfterTest()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;AfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.Afterclass()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;Afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:46</td>   <td>74</td> <td title="&lt;&lt;BaseTest.Aftersuite()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;Aftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:57:23</td>   <td>-22906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.a()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">a</td> 
+  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:57:35</td>   <td>-10414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.a()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">a</td> 
+  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:28</td>   <td>-78240</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:28</td>   <td>-78223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeclass()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:28</td>   <td>-78270</td> <td title="&gt;&gt;BaseTest.beforesuite()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:28</td>   <td>-78199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:38</td>   <td>-67678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:46</td>   <td>-60127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:03</td>   <td>-42920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:11</td>   <td>-34468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:19</td>   <td>-26650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:31</td>   <td>-14467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:57:07</td>   <td>-38934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.p()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">p</td> 
+  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:57:15</td>   <td>-30594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.p()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">p</td> 
+  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:56:34</td>   <td>-71580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.q()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">q</td> 
+  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:56:42</td>   <td>-63965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.r()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">r</td> 
+  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:34</td>   <td>-71557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:42</td>   <td>-63956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:56:59</td>   <td>-47186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:07</td>   <td>-38917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:15</td>   <td>-30577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:27</td>   <td>-18419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>20/08/21 08:57:42</td>   <td>-3870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@182738614</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>20/08/21 08:56:51</td>   <td>-54619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.x()[pri:0, instance:Testpackage2.TestCase1@548a9f61]">x</td> 
+  <td>main@182738614</td>   <td></td> </tr>
 </table>
